Fix T80395: Cycles baking crash when Surfaces are disabled in the view layer

Always enable surfaces for baking, otherwise there is nothing to bake to.

Differential Revision: https://developer.blender.org/D9015